<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity2">



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/partyyy" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="14dp"
                android:text="Category"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="63dp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/anyButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:backgroundTintMode="src_in"
                        android:text="@string/any"
                        android:textSize="18sp">

                    </Button>

                    <Button
                        android:id="@+id/generalButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/general"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/sportButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="SPORT"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/historyButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/h_story"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/filmButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/f_lm"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/musicButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/mus_c"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/mathButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/math"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/computerButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/computer"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/geographyButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/geography"
                        android:textSize="16sp">

                    </Button>

                    <Button
                        android:id="@+id/vehiclesButton"
                        android:layout_width="116dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:backgroundTint="@android:color/holo_purple"
                        android:text="@string/veh_cles"
                        android:textSize="16sp">

                    </Button>


                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:text="@string/difficulty"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                app:layout_editor_absoluteY="220dp">

            </TextView>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"

                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/startTest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <RadioButton

                    android:id="@+id/radioEasy"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"

                    android:layout_marginLeft="30dp"
                    android:gravity="center"
                    android:text="Easy">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="Medıum">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radioHard"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="Hard">

                </RadioButton>
            </RadioGroup>

            <ImageView
                android:id="@+id/startTest"
                android:layout_width="match_parent"
                android:layout_height="230dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:srcCompat="@drawable/start_test" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/toExit"
        android:layout_width="101dp"
        android:layout_height="82dp"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/signout_pic" />
</androidx.constraintlayout.widget.ConstraintLayout>